--- a/src/theme/BlogPostItem/styles.module.css
+++ b/src/theme/BlogPostItem/styles.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   height: 100%;
   transition: all 0.3s ease;
+  padding-bottom: 4rem;
 }
 
 .item:hover {
